# jni-maven-plugin

./: .gitignore  README.md  pom.xml
src/main/java/me/mat/jni/: BuildMojo.java  CleanMojo.java  CompileNativesMojo.java  GenerateCMakeMojo.java  GenerateHeadersMojo.java  PackageNativesMojo.java  SetupProjectMojo.java
src/main/java/me/mat/jni/util/: FileUtil.java  OperatingSystem.java  ProcessStarter.java
src/main/resources/: CMakeLists.txt
